--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
             WHAT IS BRACKETS?
         -->
         <p>
-            <em>Brackets is a different type of editor.</em>
-            Brackets has some unique features like Quick Edit, Live Preview and others that you may not find in other
-            editors. Brackets is written in JavaScript, HTML and CSS. That means that most of you using Brackets
-            have the skills necessary to modify and extend the editor. In fact, we use Brackets every day to build
-            Brackets. To learn more about how to use the key features, read on.
+            <a href="https://www.behance.net/madisonyn95940" target="_blank"> Check out my Behance Profile </a>
         </p>
         
         <!--
