--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   <nav>
     <ul>
       <li><a href="about.html">About</a></li>
-      <li><a href="projects.html">Projects</a></li>
+      <li><a href="index.html">Projects</a></li>
     </ul>
   </nav>
 
