changed .jpg to capital

--- a/index.html
+++ b/index.html
@@ -42,26 +42,26 @@
       <h2>Digital and Film Photos</h2>
       <div class="row">
         <div class="column">
-          <img src="images/cornerhouse.jpg">
-          <img src="images/boathouse.jpg">
-          <img src="images/dog.jpg">
-          <img src="images/trail.jpg">
+          <img src="images/cornerhouse.JPG">
+          <img src="images/boathouse.JPG">
+          <img src="images/dog.JPG">
+          <img src="images/trail.JPG">
         </div>
         <div class="column">
-          <img src="images/rockslide.jpg">
-          <img src="images/rockview.jpg">
-          <img src="images/strawberries.jpg">
+          <img src="images/rockslide.JPG">
+          <img src="images/rockview.JPG">
+          <img src="images/strawberries.JPG">
         </div>
         <div class="column">
-          <img src="images/greenhouse.jpg">
-          <img src="images/jump.jpg">
-          <img src="images/fruit.jpg">
-          <img src="images/boulder.jpg">
+          <img src="images/greenhouse.JPG">
+          <img src="images/jump.JPG">
+          <img src="images/fruit.JPG">
+          <img src="images/boulder.JPG">
         </div>
         <div class="column">
-          <img src="images/bridgeshadow.jpg">
-          <img src="images/oranges.jpg">
-          <img src="images/firehand.jpg">
+          <img src="images/bridgeshadow.JPG">
+          <img src="images/oranges.JPG">
+          <img src="images/firehand.JPG">
         </div>
       </div>
     </section>
